# pymcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
cli/: mcp.py
examples/: test-echo-tool.yaml
mcp/: __init__.py
mcp/client/: client.py
mcp/prompts/: registry.py
mcp/protocol/: __init__.py  base.py  methods.py  validation.py
mcp/resources/: registry.py
mcp/server/: handler.py  server.py  session.py
mcp/tools/: base.py  registry.py
mcp/tools/loaders/: yaml_loader.py
mcp/transport/: __init__.py  base.py  sse.py  stdio.py
tests/: test_protocol.py  test_transport.py
