[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcp"
version = "0.1.0"
description = "Python implementation of the Model Context Protocol (MCP)"
authors = [
    {name = "Mohsin Iqbal", email = "iqbalmohsin743@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anyio>=4.2.0",
    "fastapi>=0.109.0",
    "sse-starlette>=1.6.5",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "typer[all]>=0.9.0",
    "jsonrpc>=1.2.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "watchdog>=3.0.0",
    "httpx>=0.26.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
]

[project.scripts]
mcp = "cli.mcp:app"

[tool.hatch.build.targets.wheel]
packages = ["mcp", "cli"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "TCH"]
ignore = []
line-length = 88
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
